Update debug config, scripts, and enable source maps
Replaces Node-based debug configurations with a Chrome attach setup in launch.json, removes '--turbo' from dev scripts in package.json, and enables source maps in tsconfig.json for improved debugging.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
     "scripts": {
-      "dev": "next dev --turbo",
-      "dev:inspect": "node --inspect-brk node_modules/next/dist/bin/next dev --turbo",
+      "dev": "next dev",
+      "dev:inspect": "node --inspect-brk node_modules/next/dist/bin/next dev",
       "build": "next build",
       "start": "next start"
     },
