--- a/package.json
+++ b/package.json
@@ -2,28 +2,29 @@
   "name": "beaver-timer",
   "version": "0.1.0",
   "private": true,
-    "scripts": {
-      "dev": "next dev",
-      "dev:inspect": "node --inspect-brk node_modules/next/dist/bin/next dev",
-      "build": "next build",
-      "start": "next start"
-    },
+  "scripts": {
+    "dev": "next dev",
+    "dev:inspect": "node --inspect-brk node_modules/next/dist/bin/next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.6.0",
+    "lucide-react": "^0.469.0",
     "next": "14.2.4",
     "postcss": "^8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "zustand": "^4.5.2",
     "tailwindcss": "^3.4.14",
-    "lucide-react": "^0.469.0"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
+    "@types/node": "^22.7.7",
     "@types/react": "^18.3.9",
-    "@types/node": "^22.7.7"
+    "typescript": "^5.6.3"
   }
 }
